--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,31 +7,49 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/pict"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/pict"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".teknisi.TeknisiWorkActivity"
+            android:name=".manager.ListUserActivity"
             android:exported="true" />
+        <activity
+            android:name=".manager.ManagerActivity"
+            android:exported="true" />
+        <activity
+            android:name=".kasir.ActivityDetailTransaksi"
+            android:exported="true" />
+        <activity
+            android:name=".kasir.ListTransaksiActivity"
+            android:exported="true" />
+        <activity
+            android:name=".teknisi.ProfileTeknisiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".teknisi.HistoryTeknisiActivity"
+            android:exported="false" />
+        <activity
+            android:name=".teknisi.TeknisiWorkActivity"
+            android:exported="false" />
         <activity
             android:name=".warehouse.ListItem"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".warehouse.FormWarehouse"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".teknisi.MainActivity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".koneksi.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".koneksi.LoginActivity"
             android:exported="true"
-            android:noHistory="true" />
-        <activity
-            android:name=".RegisterActivity"
-            android:exported="true">
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
